syntax = "proto3";
option java_multiple_files = true;
package com.jfjara.grpc.infraestructure.proto;

message MovieShowtimesResponse {
  message Movie {
    string id = 1;
    string title = 2;
  }
  repeated Movie movies = 1;
}

message MovieRequest {
  string id = 1;
}

message SeatResponse {
    sfixed32 number = 1;
}

message EmptyMessage { }

service CinemaService {
  rpc getMovies(EmptyMessage) returns (MovieShowtimesResponse);
  rpc bookSeat(MovieRequest) returns (SeatResponse);
}